--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,29 +1,133 @@
+/* Google Fonts
+font-family: 'Staatliches', 'Futura', sans-serif; /* navbar, page headings
+font-family: 'Lato', sans-serif; /* large blocks of text
+font-family: 'Roboto Slab', serif; /* accent text
+font-family: 'Patrick Hand', sans-serif; /* footer
+*/
+
 /* Universal styling */
+body {
+  margin: 0;
+  background-color: #ffffff;
+  color: #000000;
+  font-family: 'Lato', sans-serif;
+  font-size: 1em; 
+}
+
 ul {
   list-style: none;
   padding: 0;
 }
 
+a {
+  color: #000000;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:visited {
+  color: #1a1a1d;
+}
+
 
 /* Navbar */
 .navbar {
-  width: 100%;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  background-color: #ffffff;
+  color: #000000;
+  
+}
+
+.logo {
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px;
+  color: #3d5c36;
+  font-family: 'Staatliches', 'Futura', sans-serif;
+  font-size: 2em;
 }
 
 .menu {
   display: flex;
   flex-direction: row;
-  justify-items: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
 }
 
-.menu ul {
+.menu li {
+  margin-right: 20px;
+  font-family: 'Staatliches', 'Futura', sans-serif;
+  text-transform: uppercase;
+}
+
+.menu a {
+  margin-right: 20px;
+}
+
+/* Sub-menu */
+ul.menu {
+  font-size: 1.4em;
+  letter-spacing: .15em;
+  text-transform: uppercase;
+}
+
+ul.menu li a {
+  display: block; 
+  background-color: rgba(255, 255 ,255, 0.5);
+}
+
+ul.menu > li:hover {
+  background-color: #ffffff;
+}
+
+ul.menu li a:hover {
+  border-bottom: none;
+}
+
+ul.menu > li {
+  padding: 0px;
+  display: inline-block; 
+  position: relative; 
+}
+
+ul.menu > li ul {
+  display: none; 
+  position: absolute; 
+  left: -1px;
+  width: 250px;
+  margin-top: 1px;
+}
+
+ul.menu > li:hover ul {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+ul.menu > li ul li {
+  display: inline-block;
+}
+
+ul.dropdown {
+  position: absolute;
+  z-index: 1000;
+  width: 250px;
+  padding: 0px;
+  background-color: rgba(255, 255 ,255, 0.5);
+}
+
+.sublink {
+  background-color: rgba(255, 255 ,255, 0.5);
+  padding: 5px;
 }
 
 
@@ -38,4 +142,5 @@ ul {
 
 .footer p {
   line-height: 0.2em;
+  font-family: 'Roboto Slab', serif;
 }
