--- a/client/src/App.css
+++ b/client/src/App.css
@@ -144,3 +144,9 @@ ul.dropdown {
   line-height: 0.2em;
   font-family: 'Roboto Slab', serif;
 }
+
+
+/* (Universal) Page Container */
+.container {
+  width: 100%;
+}
