--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,16 @@ body {
   font-size: 1em; 
 }
 
+h1 {
+  margin-left: 50px;
+  color: #1a1a1d;
+  font-family: 'Staatliches', 'Futura', sans-serif;
+  font-size: 3em;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: .15em;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -48,7 +58,7 @@ a:visited {
 .logo a {
   display: flex;
   justify-content: flex-start;
-  padding: 20px;
+  margin-left: 50px;
   color: #3d5c36;
   font-family: 'Staatliches', 'Futura', sans-serif;
   font-size: 2em;
@@ -85,11 +95,10 @@ ul.menu {
 
 ul.menu li a {
   display: block; 
-  background-color: rgba(255, 255 ,255, 0.5);
 }
 
 ul.menu > li:hover {
-  background-color: #ffffff;
+  text-decoration: none;
 }
 
 ul.menu > li {
@@ -126,7 +135,6 @@ ul.dropdown {
 }
 
 .sublink {
-  background-color: rgba(255, 255 ,255, 0.5);
   padding: 5px;
 }
 
@@ -150,3 +158,14 @@ ul.dropdown {
 .container {
   width: 100%;
 }
+
+
+/* About Section - Biography and Artist Statement */
+
+
+
+/* Gallery Section */
+
+
+
+/* Gallery Pages */
