--- a/client/src/App.css
+++ b/client/src/App.css
@@ -165,8 +165,40 @@ ul.dropdown {
 
 
 
-/* Gallery Section */
+/* Gallery Menu */
+.gallery-menu {
+  display: none;
+}
 
+
+/* Gallery Container */
+.gallery-container {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.item-card {
+  margin: 30px;  
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+}
+
+.item-card img {
+  position: absolute;
+  margin: auto;
+  min-width: 100%;
+  min-height: 100%;
+  left: -80%;
+  right: -80%;
+  top: -100%;
+  bottom: -100%
+}
 
 
 /* Gallery Pages */
