--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,22 +182,16 @@ ul.dropdown {
 }
 
 .item-card {
-  margin: 30px;  
+  margin: 30px;
   width: 200px;
   height: 200px;
   overflow: hidden;
-  position: relative;
 }
 
 .item-card img {
-  position: absolute;
-  margin: auto;
-  min-width: 100%;
-  min-height: 100%;
-  left: -80%;
-  right: -80%;
-  top: -100%;
-  bottom: -100%
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
 
