--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,9 @@ a:hover {
 
 /* Navbar */
 .navbar {
+  position: fixed;
+  left: 0;
+  top: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -152,6 +155,7 @@ ul.dropdown {
 
 /* (Universal) Page Container */
 .container {
+  padding-top: 100px;
   width: 100%;
 }
 
@@ -186,7 +190,7 @@ ul.dropdown {
 
 .home-random-image {
   width: 74%;
-  margin-top: 50px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -277,7 +281,7 @@ ul.dropdown {
 }
 
 .item-details-images {
-  width: 60%;
+  width: 65%;
   padding-top: 32.16px;
   display: flex;
   flex-direction: column;
@@ -293,7 +297,7 @@ ul.dropdown {
   width: 30%;
   position: fixed;
   left: 0;
-  top: 80px;
+  top: 100px;
 }
 
 .item-details-info p {
