--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,7 +70,7 @@ a:hover {
 }
 
 .menu {
-  width: 75%;
+  width: 60%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -281,7 +281,7 @@ ul.dropdown {
 }
 
 .item-details-images {
-  width: 65%;
+  width: 59%;
   padding-top: 32.16px;
   display: flex;
   flex-direction: column;
@@ -295,10 +295,31 @@ ul.dropdown {
 }
 
 .item-details-info {
-  width: 30%;
+  width: 40%;
   position: fixed;
   left: 0;
   top: 100px;
+}
+
+.breadcrumb {
+  margin-left: 50px;
+  width: 100%;
+}
+
+.breadcrumb li {
+  display: inline;
+  font-family: 'Roboto Slab', serif;
+  font-style: italic;
+  font-size: .9em;
+  text-transform: lowercase;
+  color: #000000;
+}
+
+.breadcrumb li+li:before {
+  padding: 1em;
+  color: #aaaaaa;
+  font-style: normal;
+  content: "»";
 }
 
 .item-details-info p {
@@ -308,9 +329,10 @@ ul.dropdown {
 }
 
 .prev-next-buttons {
-  border: 1px solid red;
-  margin-left: 50px;
-  font-size: 3em;
+  padding-top: 30px;
+  display: flex;
+  justify-content: space-around;
+  font-size: 2.5em;
 }
 
 
