--- a/client/src/App.css
+++ b/client/src/App.css
@@ -197,28 +197,13 @@ ul.dropdown {
 }
 
 
-/* Home Page and HomeGallery Component */
-.home-container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-
-
-
-
-/* Home Gallery */
+/* Home Gallery Component */
 .home-gallery-card {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
   font-family: 'Staatliches', 'Futura', sans-serif;
   font-size: 3em;
   color: #353535;
@@ -698,7 +683,7 @@ ul.dropdown {
 
   .item-title {
     margin-left: 30px;
-    font-size: 1.8em;
+    font-size: 2.2em;
   }
 
   .breadcrumb {
@@ -710,7 +695,7 @@ ul.dropdown {
     display: inline;
     font-family: 'Roboto Slab', serif;
     font-style: italic;
-    font-size: .8em;
+    font-size: .9em;
     text-transform: lowercase;
     color: #000000;
   }
@@ -724,15 +709,14 @@ ul.dropdown {
 
   .item-details-info p {
     margin-left: 30px;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.25em;
+    font-size: 1.5em;
   }
 
   .prev-next-buttons {
     padding-top: 30px;
     display: flex;
     justify-content: space-around;
-    font-size: 2em;
+    font-size: 3em;
   }
 
 
