--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,9 @@ a {
   text-decoration: none;
 }
 
-a:hover {
+/* a:hover {
   text-decoration: underline;
-}
+} */
 
 
 /* Navbar */
@@ -53,35 +53,50 @@ a:hover {
   width: 100%;
   height: 80px;
   background-color: #ffffff;
-  color: #000000;
 }
 
 .logo img {
   display: flex;
   justify-content: flex-start;
-  margin-left: 50px;
-  width: 50px;
+  margin-left: 40px;
+  width: 42px;
 }
 
 .menu {
   width: 60%;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-content: center;
 }
 
-.menu li {
+.menu-link {
   font-family: 'Staatliches', 'Futura', sans-serif;
   font-weight: 400;
-  font-size: 1.4em;
+  font-size: 1.25em;
   letter-spacing: .1em;
   text-transform: uppercase;
+  color: #353535;
+}
+
+.slider {
+  position: inline;
+  display: block;
+  left: 0;
+  top: 90%;
+  margin: 0 auto;
+  height: 2px;
+  background-color: #000000;
+  width: 0%;
+  transition: width .5s;
+}
+
+.menu-link:hover > .slider {
+  text-decoration: none;
+  width: 100%;
 }
 
 .menu a.chosen {
-  text-decoration: underline;
+  color: #353535;
 }
 
 
@@ -93,10 +108,11 @@ a:hover {
   align-content: center;
   align-items: center;
   margin-top: 100px;
-  padding: 50px 0 50px 0;
+  padding: 50px 0 25px 0;
 }
 
 .footer p {
+  font-size: .8em;
   line-height: 0.2em;
   font-family: 'Roboto Slab', serif;
 }
@@ -154,7 +170,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   font-family: 'Staatliches', 'Futura', sans-serif;
-  font-size: 3em;
+  font-size: 2.5em;
   color: #353535;
 }
 
