--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,65 @@ a {
   text-decoration: none;
 }
 
-/* a:hover {
-  text-decoration: underline;
-} */
+
+/* Hamburger Menu */
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 26px;
+  top: 26px;
+}
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #000000;
+}
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #000000;
+}
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 40px;
+  width: 40px;
+}
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #000000;
+}
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+/* General sidebar styles */
+.bm-menu {
+  background: #ffffff;
+  padding: 2em 1.2em 0;
+  font-size: 1.15em;
+}
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown-logo img {
+  display: flex;
+  justify-content: flex-start;
+  width: 80px;
+  outline: 0;
+}
 
 
 /* Navbar */
