--- a/src/App.css
+++ b/src/App.css
@@ -675,7 +675,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 
   /* Artwork Details */
-  /* Artwork Details */
   .item-details {
     margin-left: 0px;
     width: 100%;
@@ -704,6 +703,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   }
 
   .item-details-info {
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
